--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
     <section>
         <h3>Professional Summary</h3>
         <p>
-            Results-driven Marketing Communications Specialist with 3+ years of experience
-            across electronics, AI, and retail sectors. Proven track record of onboarding
-            100+ vendors, managing 200+ product launches, and driving operational excellence.
-            Recognized with Rising Star (Q1 2024) and Best Performer (Q1 2025) awards.
+            <p>
+    Marketing Communications & Operations Specialist with 3+ years of experience across electronics,
+    AI, and retail sectors. Currently driving vendor onboarding, product launches, and data accuracy
+    initiatives at scale for Crowd Supply / Mouser Electronics.
+    <br><br>
+    Recognized as a Rising Star (Q1 2024) and Best Performer (Q1 2025) for operational excellence,
+    cross-functional ownership, and consistent delivery in high-impact, fast-moving environments.
+</p>
+
         </p>
     </section>
 
