Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,73 +7,96 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Addanki Hari Kiran</h1>
-        <h2>Marketing Communications & Operations Specialist</h2>
-        <p>Bengaluru, India</p>
-        <div class="links">
-            <a href="Addanki_Hari_Kiran_Resume.pdf" target="_blank">Resume</a>
-            <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-            <a href="mailto:harikiran.addanki@outlook.com">Email</a>
-        </div>
-    </header>
 
-    <section>
-        <h3>Professional Summary</h3>
-        <p>
-            <p>
-    Marketing Communications & Operations Specialist with 3+ years of experience across electronics,
-    AI, and retail sectors. Currently driving vendor onboarding, product launches, and data accuracy
-    initiatives at scale for Crowd Supply / Mouser Electronics.
-    <br><br>
-    Recognized as a Rising Star (Q1 2024) and Best Performer (Q1 2025) for operational excellence,
-    cross-functional ownership, and consistent delivery in high-impact, fast-moving environments.
-</p>
+<header>
+    <h1>Addanki Hari Kiran</h1>
+    <h2>Marketing Communications & Operations Specialist</h2>
+    <p>Bengaluru, India</p>
 
-        </p>
-    </section>
+    <div class="links">
+        <a href="Addanki_Hari_Kiran_Resume.pdf" target="_blank">Resume</a>
+        <a href="https://www.linkedin.com/in/a-hari-kiran-9406b0109/" target="_blank">LinkedIn</a>
+        <a href="mailto:harikiran.addanki@outlook.com">Email</a>
+    </div>
+</header>
 
-    <section>
-        <h3>Experience</h3>
-        <h4>Crowd Supply / Mouser Electronics — Marketing Communications Specialist</h4>
-        <ul>
-            <li>Primary point of contact for global vendors, managing onboarding, NPI, and inventory workflows</li>
-            <li>Onboarded 100+ vendors with 100% data accuracy and platform compliance</li>
-            <li>Managed 200+ product launches, accelerating go-to-market readiness</li>
-            <li>Maintained vendor databases using GitHub and Zaphod</li>
-            <li>Key liaison to President for cross-functional initiatives</li>
-        </ul>
+<section>
+    <h3>Professional Summary</h3>
+    <p>
+        Marketing Communications & Operations Specialist with 3+ years of experience across electronics,
+        AI, and retail sectors. Currently driving vendor onboarding, product launches, and data accuracy
+        initiatives at scale for Crowd Supply / Mouser Electronics.
+        <br><br>
+        Recognized as a Rising Star (Q1 2024) and Best Performer (Q1 2025) for operational excellence,
+        cross-functional ownership, and consistent delivery in high-impact, fast-moving environments.
+    </p>
+</section>
 
-        <h4>Khazana Jewellery — Management Trainee (Marketing)</h4>
-        <ul>
-            <li>Managed ATL/BTL branding for 48 retail outlets across South India</li>
-            <li>Executed seasonal campaigns aligned with corporate goals</li>
-        </ul>
+<section>
+    <h3>Experience</h3>
+    <h4>Crowd Supply / Mouser Electronics — Marketing Communications Specialist</h4>
+    <ul>
+        <li>Primary point of contact for global vendors, owning end-to-end onboarding, NPI coordination, and inventory workflows</li>
+        <li>Successfully onboarded 100+ vendors with 100% data accuracy and platform compliance</li>
+        <li>Coordinated 200+ product launches by streamlining specifications, accelerating go-to-market readiness</li>
+        <li>Owned vendor data integrity using GitHub and Zaphod, ensuring clean, reliable data for global stakeholders</li>
+        <li>Acted as key liaison to the President, supporting cross-functional initiatives and vendor relationships</li>
+        <li>Reduced customer complaint response times to under 24 hours by optimizing MOQ and lead-time workflows</li>
+        <li>Facilitated RoHS compliance and OFAC screening to support seamless international trade</li>
+        <li>Recognized with Rising Star and Best Performer awards for exceeding performance benchmarks</li>
+    </ul>
+</section>
 
-        <h4>Cognizant Technology Solutions — Programmer Analyst Trainee</h4>
-        <ul>
-            <li>Completed enterprise-level technical training in Mainframes</li>
-        </ul>
-    </section>
+<section>
+    <h3>Key Projects</h3>
 
-    <section>
-        <h3>Skills & Tools</h3>
-        <p>
-            GitHub · Zaphod · Brightcove · Primer · Inkscape · MS Office ·
-            Vendor Onboarding · Product Launch Operations · Compliance (RoHS, OFAC)
-        </p>
-    </section>
+    <p><strong>Vendor Onboarding at Scale</strong><br>
+    Led onboarding of 100+ global vendors by coordinating documentation, technical specifications,
+    compliance checks, and platform readiness while maintaining 100% data accuracy.
+    <br>
+    <em>Tools:</em> GitHub, Zaphod, CMS Platforms
+    </p>
 
-    <section>
-        <h3>Education</h3>
-        <p>
-            <strong>MBA (Marketing)</strong> — Acharya Bangalore B-School<br>
-            <strong>B.E. Electronics & Communication</strong> — SCSVMV University
-        </p>
-    </section>
+    <p><strong>Product Launch Operations</strong><br>
+    Supported and coordinated 200+ product launches by managing specifications, inventory readiness,
+    and cross-team communication, improving go-to-market timelines.
+    <br>
+    <em>Tools:</em> GitHub, Zaphod, Internal Launch Systems
+    </p>
 
-    <footer>
-        <p>© Addanki Hari Kiran</p>
-    </footer>
+    <p><strong>Data Accuracy & Compliance Management</strong><br>
+    Owned vendor and product data integrity across systems, ensuring RoHS and OFAC compliance
+    critical for international trade and customer trust.
+    <br>
+    <em>Tools:</em> GitHub, Zaphod, Compliance Frameworks
+    </p>
+</section>
+
+<section>
+    <h3>Skills & Tools</h3>
+    <p>
+        Vendor Onboarding & Lifecycle Management<br>
+        Product Launch Operations<br>
+        Marketing Communications & Campaign Support<br>
+        Data Accuracy & Compliance (RoHS, OFAC)<br>
+        Cross-functional Stakeholder Management
+    </p>
+    <p>
+        <strong>Tools:</strong> GitHub, Zaphod, Brightcove, Primer, Inkscape, MS Office Suite
+    </p>
+</section>
+
+<section>
+    <h3>Education</h3>
+    <p>
+        <strong>MBA (Marketing)</strong> — Acharya Bangalore B-School, Bengaluru<br>
+        <strong>B.E. Electronics & Communication</strong> — SCSVMV University, Kancheepuram
+    </p>
+</section>
+
+<footer>
+    <p>© Addanki Hari Kiran</p>
+</footer>
+
 </body>
 </html>
