Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Bengaluru, India</p>
 
     <div class="links">
-        <a href="https://harikiran-addanki.github.io/resume.pdf" target="_blank">Resume</a>
+        <a href="https://harikiran-addanki.github.io/Addanki-Hari-Kiran-Resume.pdf" target="_blank">Resume</a>
         <a href="https://www.linkedin.com/in/a-hari-kiran-9406b0109/" target="_blank">LinkedIn</a>
         <a href="mailto:harikiran.addanki@outlook.com">Email</a>
     </div>
