Revamp index.html with personal and professional details
Updated index.html to include personal information, experience, skills, education, and contact details.

--- a/index.html
+++ b/index.html
@@ -1,102 +1,94 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Addanki Hari Kiran | Marketing Communications Specialist</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+AHK.
+	•	EXPERIENCE
+	•	SKILLS
+	•	EDUCATION
+	•	CONTACT
+AVAILABLE FOR NEW OPPORTUNITIES
+Addanki Hari Kiran
+HARDWARE CREATOR OPERATIONS · GTM · GLOBAL COMPLIANCE
+Sole India-based operations resource for Crowd Supply — an open-source hardware crowdfunding platform and Mouser Electronics subsidiary. Managing the full creator-to-distribution pipeline independently, from campaign onboarding through manufacturing, compliance, and global listing.
+↓ DOWNLOAD RESUME ↗ LINKEDIN ✉ EMAIL
+100+
+CREATORS ONBOARDED
+200+
+PRODUCTS LAUNCHED
+3+
+YEARS EXPERIENCE
+2×
+PERFORMANCE AWARDS
+EXPERIENCE
 
-<header>
-    <h1>Addanki Hari Kiran</h1>
-    <h2>Marketing Communications & Operations Specialist</h2>
-    <p>Bengaluru, India</p>
+01
+Where I've worked
+Marketing Communications Specialist
+Nov 2023 – Present
+Mouser Electronics (Crowd Supply) · Bengaluru, India
+Context: Crowd Supply is an open-source hardware crowdfunding and distribution platform — a Mouser Electronics subsidiary. I am the sole India-based Mouser employee dedicated full-time to Crowd Supply, operating independently as the entire India operational backend. Direct liaison to the President of Crowd Supply.
+HARDWARE CREATOR ONBOARDING & LIFECYCLE
+	•	Onboarded 100+ independent hardware creators as vendors into Mouser's ecosystem — managing the full pipeline from campaign funding through manufacturing, inbound shipment, and platform listing. Coordinated NPI documentation, technical specifications, and inventory replenishment via POs — primary operational interface between creators and Mouser's global distribution network. Optimized MOQ and lead-time workflows, reducing customer complaint response times to under 24 hours.
+PRODUCT LAUNCH & PLATFORM OPERATIONS
+	•	Delivered 200+ product listings on Mouser.com — owning specification intake, data structuring, and platform readiness from post-manufacturing through live publication. Maintained 100% data accuracy across vendor and product databases (GitHub, Zaphod) supporting reliable operations across a months-long creator-to-distribution cycle.
+PROCESS INITIATIVES & CROSS-FUNCTIONAL EXPANSION
+	•	Initiated a post-launch creator communication workflow — proactively notifying creators when products go live on Mouser, guiding inventory management, and monitoring stock levels to trigger replenishment before depletion. Process approved by management and now standard practice. Raising Product Content Requests to Mouser's internal product team for microsite creation — extending creator visibility on the platform and bridging operational onboarding with web presence.
+COMPLIANCE & TRADE
+	•	Independently facilitated RoHS compliance and OFAC screening for all creator products entering international distribution — ensuring regulatory readiness across global markets. Direct operational liaison to the President of Crowd Supply, supporting cross-functional strategy, creator relationships, and platform initiatives across US and India. 🏆 Rising Star Award (Q1 2024)  ·  Best Performer Award (Q1 2025)
+Management Trainee – Marketing
+Aug 2019 – Jan 2020
+Khazana Jewellery · Chennai, India
+	•	Managed ATL/BTL branding and campaign coordination across 48 retail outlets spanning South India, ensuring brand consistency aligned to corporate goals. Coordinated seasonal marketing campaigns with external media partners, managing execution timelines and deliverables.
+Programmer Analyst Trainee
+Jun 2016 – Dec 2016
+Cognizant Technology Solutions · Chennai, India
+	•	Completed intensive technical training in the Mainframes domain — gained exposure to enterprise data processing, systems logic, and structured workflow management.
+SKILLS
 
-    <div class="links">
-        <a href="https://harikiran-addanki.github.io/Addanki-Hari-Kiran-Resume.pdf" target="_blank">Resume</a>
-        <a href="https://www.linkedin.com/in/a-hari-kiran-9406b0109/" target="_blank">LinkedIn</a>
-        <a href="mailto:harikiran.addanki@outlook.com">Email</a>
-    </div>
-</header>
+02
+Core competencies
+GTM & LAUNCH OPERATIONS
+End-to-End Product Launch
+NPI Documentation
+Creator-to-Distribution Pipeline
+Go-to-Market Readiness
+CREATOR & VENDOR MANAGEMENT
+Hardware Creator Lifecycle
+Crowdfunding-to-Wholesale
+Vendor Onboarding
+MOQ & Lead-Time Optimization
+COMPLIANCE & TRADE
+RoHS Compliance
+OFAC Screening
+International Trade Operations
+Platform Compliance
+TOOLS & PLATFORMS
+GitHub
+Zaphod
+Primer
+Brightcove
+Inkscape
+MS Office Suite
+EDUCATION
 
-<section>
-    <h3>Professional Summary</h3>
-    <p>
-        Marketing Communications & Operations Specialist with 3+ years of experience across electronics,
-        AI, and retail sectors. Currently driving vendor onboarding, product launches, and data accuracy
-        initiatives at scale for Crowd Supply / Mouser Electronics.
-        <br><br>
-        Recognized as a Rising Star (Q1 2024) and Best Performer (Q1 2025) for operational excellence,
-        cross-functional ownership, and consistent delivery in high-impact, fast-moving environments.
-    </p>
-</section>
+03
+Academic background
+MBA in Marketing
+Acharya Bangalore B-School (ABBS), Bengaluru
+2017 – 2019
+B.E. in Electronics & Communication Engineering
+SCSVMV University, Kancheepuram
+2012 – 2016
+LANGUAGES
 
-<section>
-    <h3>Experience</h3>
-    <h4>Crowd Supply / Mouser Electronics — Marketing Communications Specialist</h4>
-    <ul>
-        <li>Primary point of contact for global vendors, owning end-to-end onboarding, NPI coordination, and inventory workflows</li>
-        <li>Successfully onboarded 100+ vendors with 100% data accuracy and platform compliance</li>
-        <li>Coordinated 200+ product launches by streamlining specifications, accelerating go-to-market readiness</li>
-        <li>Owned vendor data integrity using GitHub and Zaphod, ensuring clean, reliable data for global stakeholders</li>
-        <li>Acted as key liaison to the President, supporting cross-functional initiatives and vendor relationships</li>
-        <li>Reduced customer complaint response times to under 24 hours by optimizing MOQ and lead-time workflows</li>
-        <li>Facilitated RoHS compliance and OFAC screening to support seamless international trade</li>
-        <li>Recognized with Rising Star and Best Performer awards for exceeding performance benchmarks</li>
-    </ul>
-</section>
-
-<section>
-    <h3>Key Projects</h3>
-
-    <p><strong>Vendor Onboarding at Scale</strong><br>
-    Led onboarding of 100+ global vendors by coordinating documentation, technical specifications,
-    compliance checks, and platform readiness while maintaining 100% data accuracy.
-    <br>
-    <em>Tools:</em> GitHub, Zaphod, CMS Platforms
-    </p>
-
-    <p><strong>Product Launch Operations</strong><br>
-    Supported and coordinated 200+ product launches by managing specifications, inventory readiness,
-    and cross-team communication, improving go-to-market timelines.
-    <br>
-    <em>Tools:</em> GitHub, Zaphod, Internal Launch Systems
-    </p>
-
-    <p><strong>Data Accuracy & Compliance Management</strong><br>
-    Owned vendor and product data integrity across systems, ensuring RoHS and OFAC compliance
-    critical for international trade and customer trust.
-    <br>
-    <em>Tools:</em> GitHub, Zaphod, Compliance Frameworks
-    </p>
-</section>
-
-<section>
-    <h3>Skills & Tools</h3>
-    <p>
-        Vendor Onboarding & Lifecycle Management<br>
-        Product Launch Operations<br>
-        Marketing Communications & Campaign Support<br>
-        Data Accuracy & Compliance (RoHS, OFAC)<br>
-        Cross-functional Stakeholder Management
-    </p>
-    <p>
-        <strong>Tools:</strong> GitHub, Zaphod, Brightcove, Primer, Inkscape, MS Office Suite
-    </p>
-</section>
-
-<section>
-    <h3>Education</h3>
-    <p>
-        <strong>MBA (Marketing)</strong> — Acharya Bangalore B-School, Bengaluru<br>
-        <strong>B.E. Electronics & Communication</strong> — SCSVMV University, Kancheepuram
-    </p>
-</section>
-
-<footer>
-    <p>© Addanki Hari Kiran</p>
-</footer>
-
-</body>
-</html>
+Telugu
+NATIVE
+Tamil
+FLUENT
+English
+PROFESSIONAL
+Hindi
+CONVERSATIONAL
+Kannada
+CONVERSATIONAL
+Let's connect
+Open to roles in operations, GTM, partner management & electronics ecosystem.
+✉ HARIKIRAN.ADDANKI@OUTLOOK.COM ↗ LINKEDIN
+© 2026 Addanki Hari Kiran · Bengaluru, India · 9159842840
